--- a/src/standard.skin.less
+++ b/src/standard.skin.less
@@ -43,8 +43,7 @@
   top: 17px;
   -webkit-transform: rotate(45deg);
 }
-/* TODO: Add proper Mouseover colors*/
-.ios ul li a:hover {
+.ios ul li a.active {
   background-image: -webkit-linear-gradient(top,#058cf8,#015ee7);
   background-size: 100% 100%;
   color: #fff;
@@ -57,8 +56,8 @@
   border-bottom-left-radius: 8px!important;
   border-bottom-right-radius: 8px!important;
 }
-.ios ul li a:hover span,
-.ios ul li a:hover:after {
+.ios ul li a.active span,
+.ios ul li a.active:after {
   color: #fff;
   border-color: #fff;
 }
@@ -73,6 +72,9 @@
 }
 .ios ul[data-layout=fullscreen] {
   background: #fff;
+}
+.ios ul[data-layout=updates] li {
+  white-space: normal;
 }
 .ios header {
   height: 42px;
