--- a/src/standard.skin.less
+++ b/src/standard.skin.less
@@ -89,6 +89,19 @@
   border-bottom: 1px solid #2d3033;
   color: #fff;
 }
+.ios header button {
+  background-image: -webkit-linear-gradient(top,
+    #8aa1bf 0,
+    #5877a2 50%,
+    #476999 51%,
+    #4a679b 100%
+    );
+  border: 1px solid #2e4361;
+  text-shadow: 0 -1px 0 #374351;
+  color: #fff;
+  box-shadow: 0 1px 0 #9cabc0, 0 1px 1px #788ba5;
+  border-radius: 4px;
+}
 .ios header h1 {
   text-shadow: 0 -1px 0px #48515c;
 }
