--- a/src/structure.less
+++ b/src/structure.less
@@ -11,20 +11,12 @@
   position: absolute;
   height: 28px;
   font: bold 10px/26px sans-serif;
-  background-image: -webkit-linear-gradient(top,
-    #8aa1bf 0,
-    #5877a2 50%,
-    #476999 51%,
-    #4a679b 100%
-    );
-  border: 1px solid #2e4361;
-  text-shadow: 0 -1px 0 #374351;
-  color: #fff;
-  box-shadow: 0 1px 0 #9cabc0, 0 1px 1px #788ba5;
   margin: 7px 5px;
   padding: 0 8px;
-  border-radius: 4px;
   top: 0;
+}
+.ios header button:first-child {
+  left: 0;
 }
 .ios header h1 + button {
   right: 0;
